--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,17 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_column="0"
-        android:layout_row="0"></Button>
+        android:layout_row="0"/>
     <Button
         android:id="@+id/newsPortal"
-        android:text="    CBC News      "
+        android:gravity="center"
+        android:text="CBC News"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_column="1"
-        android:layout_row="0"></Button>
+        android:layout_row="0"/>
     <Button
         android:id="@+id/moviePortal"
         android:text="Movie Info"
@@ -34,7 +35,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_column="0"
-        android:layout_row="1"></Button>
+        android:layout_row="1"/>
     <Button
         android:id="@+id/busPortal"
         android:text="Bus Route"
@@ -43,6 +44,6 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:layout_column="1"
-        android:layout_row="1"></Button>
+        android:layout_row="1"/>
 
 </GridLayout>
