--- a/app/src/main/res/layout/movie_main.xml
+++ b/app/src/main/res/layout/movie_main.xml
@@ -40,5 +40,12 @@
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+    <ProgressBar
+        android:id="@+id/progressMovie"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        style="?android:attr/progressBarStyleHorizontal"/>
 
 </LinearLayout>
