--- a/app/src/main/res/layout/activity_octranspo.xml
+++ b/app/src/main/res/layout/activity_octranspo.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:hint="Enter Stop Number"
             android:inputType="number"
-            android:maxLength="4"/>
+            android:maxLength="4"
+            android:id="@+id/stopNumber"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
