added ability to delete stops

--- a/app/src/main/res/layout/activity_octranspo_stop_info.xml
+++ b/app/src/main/res/layout/activity_octranspo_stop_info.xml
@@ -33,6 +33,13 @@
             android:id="@+id/saveStop"
             android:visibility="invisible"/>
 
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Delete Stop"
+            android:id="@+id/deleteStop"
+            android:visibility="invisible"/>
+
     </LinearLayout>
 
     <ListView
