--- a/app/src/main/res/layout/oc_busname.xml
+++ b/app/src/main/res/layout/oc_busname.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_weight="1"
         android:id="@+id/routeName"
-        android:gravity="left"/>
+        android:textSize="20sp"
+        android:layout_gravity="center_vertical"
+        />
 
 
 </LinearLayout>
