--- a/app/src/main/res/layout/movie_cell.xml
+++ b/app/src/main/res/layout/movie_cell.xml
@@ -8,14 +8,14 @@
     <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
-            tools:src="@tools:sample/backgrounds/scenic"
+            tools:src="@drawable/dog"
             android:layout_alignParentLeft="true"
             android:id="@+id/Poster"/>
 
         <TextView
                 android:id="@+id/Title"
                 android:layout_width="wrap_content"
-                android:layout_height="75dp"
+                android:layout_height="30dp"
                 android:layout_margin="30dp"
                 android:text="Mediocracy"
                 android:layout_alignEnd="@id/Poster"
