--- a/app/src/main/res/layout/movie_main.xml
+++ b/app/src/main/res/layout/movie_main.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+
 
         <EditText
                 android:layout_width="wrap_content"
@@ -26,19 +22,30 @@
                 android:layout_alignParentEnd="true"
                 android:id="@+id/Search"/>
 
-    </RelativeLayout>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Movies Listed"
+            android:text="@string/ListLabel"
+        android:id="@+id/Label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+        android:layout_below="@id/MovieSearch"/>
     <ListView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+        android:layout_below="@id/Label"/>
 
-</LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Stat Sheet"
+        android:id="@+id/StatS"/>
+
+
+</RelativeLayout>
