--- a/app/src/main/res/layout-w720dp/movie_main.xml
+++ b/app/src/main/res/layout-w720dp/movie_main.xml
@@ -11,6 +11,15 @@
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="match_parent">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/MovieToolbar"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true">
+
+        </android.support.v7.widget.Toolbar>
     <RelativeLayout android:id="@+id/topStuff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,6 +51,14 @@
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Stat Sheet"
+            android:id="@+id/StatS"/>
     </RelativeLayout>
 
     <FrameLayout
