--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -6,25 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".newsList">
 
-    <Button
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:id="@+id/newsList_toolbar"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:id="@+id/sendButton"/>
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/sendButton"
-        android:id="@+id/editText"/>
+        android:layout_alignParentRight="true"></android.support.v7.widget.Toolbar>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/sendButton"
-        android:id="@+id/listView"></ListView>
+        android:layout_below="@+id/newsList_toolbar"
+        android:id="@+id/newsListView"></ListView>
     <ProgressBar
         android:id="@+id/progressNews"
         android:layout_alignParentBottom="true"
