--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -7,6 +7,7 @@
         android:layout_gravity="center"
         android:gravity="center_horizontal"
         android:layout_weight="1"
+        android:text="Testing"
         android:id="@+id/foodContent"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"/>
