--- a/app/src/main/res/menu/news_toolbar_menu.xml
+++ b/app/src/main/res/menu/news_toolbar_menu.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action1"
-        android:title="News Portal"
+    <item android:id="@+id/action21"
+        android:title="Food Portal"
         android:icon="@drawable/ball"
         android:orderInCategory="101"
         app:showAsAction="always" />
 
-    <item android:id="@+id/action2"
+    <item android:id="@+id/action22"
         android:title="OCTranspo"
         android:icon="@drawable/car"
         android:orderInCategory="105"
         app:showAsAction="always" />
 
-    <item android:id="@+id/action3"
+    <item android:id="@+id/action23"
         android:title="Movie Portal"
         android:icon="@drawable/city"
         android:orderInCategory="110"
         app:showAsAction="always" />
-    <item android:id="@+id/action4"
+    <item android:id="@+id/action24"
         android:title="@string/help"
         android:icon="@drawable/gas"
         android:orderInCategory="120"
         app:showAsAction="never" />
-    <item android:id="@+id/action5"
-        android:title="@string/maxCalorie"
+    <item android:id="@+id/action25"
+        android:title="@string/articleCount"
         android:icon="@drawable/gas"
         android:orderInCategory="120"
         app:showAsAction="never" />
-    <item android:id="@+id/action6"
-        android:title="@string/averageCalorie"
+    <item android:id="@+id/action26"
+        android:title="@string/maxWord"
         android:icon="@drawable/gas"
         android:orderInCategory="120"
         app:showAsAction="never" />
-    <item android:id="@+id/action7"
-        android:title="@string/minCalorie"
+    <item android:id="@+id/action27"
+        android:title="@string/averageWord"
+        android:icon="@drawable/gas"
+        android:orderInCategory="120"
+        app:showAsAction="never" />
+    <item android:id="@+id/action28"
+        android:title="@string/minWord"
+        android:icon="@drawable/gas"
+        android:orderInCategory="120"
+        app:showAsAction="never" />
+    <item android:id="@+id/action29"
+        android:title="@string/backToNews"
         android:icon="@drawable/gas"
         android:orderInCategory="120"
         app:showAsAction="never" />
