finished the project!!!!!!

--- a/app/src/main/res/layout/activity_octranspo.xml
+++ b/app/src/main/res/layout/activity_octranspo.xml
@@ -8,6 +8,15 @@
     tools:context=".OCTranspo"
     android:orientation="vertical">
 
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/oc_toolbar"
+        >
+
+    </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,14 +25,14 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Stop Number"
+            android:hint="@string/ocStopNumber"
             android:inputType="number"
             android:maxLength="4"
             android:id="@+id/stopNumber"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="View Stop"
+            android:text="@string/ocViewStop"
             android:id="@+id/addStop"/>
 
     </LinearLayout>
