--- a/app/src/main/res/layout/lrt_message.xml
+++ b/app/src/main/res/layout/lrt_message.xml
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:text="No."/>
+        android:text="@string/oc_help_message"/>
 
 </LinearLayout>
