--- a/app/src/main/res/layout-w720dp/movie_main.xml
+++ b/app/src/main/res/layout-w720dp/movie_main.xml
@@ -2,7 +2,6 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="match_parent"
@@ -20,7 +19,8 @@
             android:layout_alignParentEnd="true">
 
         </android.support.v7.widget.Toolbar>
-    <RelativeLayout android:id="@+id/topStuff"
+    <RelativeLayout
+        android:id="@+id/topStuff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
